WEEK11_20221226-20230101/oE2203previewV2/logs/easymock/oe_test_easymock_spring/2022-12-29-23_51_35.log
Thu Dec 29 23:51:39 2022 - INFO  - Start to prepare the test environment.
Thu Dec 29 23:51:51 2022 - ERROR - pkgs:(springframework-test) not found
Thu Dec 29 23:55:21 2022 - INFO  - End to prepare the test environment.
Thu Dec 29 23:55:22 2022 - INFO  - Start to run test.
OurClassTest.java:4: error: package org.springframework.test.util does not exist
import org.springframework.test.util.ReflectionTestUtils;
                                    ^
OurClassTest.java:18: error: cannot find symbol
        ReflectionTestUtils.setField(classUnderTest, "other", other);
        ^
  symbol:   variable ReflectionTestUtils
  location: class OurClassTest
OurClassTest.java:23: error: cannot find symbol
        ReflectionTestUtils.setField(classUnderTest, "other", other2);
        ^
  symbol:   variable ReflectionTestUtils
  location: class OurClassTest
3 errors
Thu Dec 29 23:55:46 2022 - ERROR - oe_test_easymock_spring.sh line 30
Thu Dec 29 23:55:50 2022 - ERROR - oe_test_easymock_spring.sh line 32
Thu Dec 29 23:55:51 2022 - INFO  - End to run test.
Thu Dec 29 23:55:52 2022 - ERROR - failed to execute the case.
Thu Dec 29 23:55:53 2022 - INFO  - Start to restore the test environment.
Thu Dec 29 23:56:24 2022 - INFO  - End to restore the test environment.
